--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -5,7 +5,14 @@
   padding: 0rem 2rem;
   justify-content: center;
   align-items: center;
-  border: 3px solid green;
+  transition: all 0.3s ease;
+}
+
+.navigation.active {
+  opacity: 0.8;
+  backdrop-filter: blur(10px);
+  background-color: var(--primary-color);
+  transition: 0.3s ease all;
 }
 
 .navigationWrapper {
@@ -15,24 +22,22 @@
   justify-content: space-between;
   align-items: center;
   align-self: stretch;
-  border: 3px solid green;
 }
 
-.imageContainer{
-    width: 7.3125rem;
-height: 5.5rem;
-aspect-ratio: 117/88;
-border: 3px solid blue;
+.imageContainer {
+  width: 7.3125rem;
+  height: 5.5rem;
+  aspect-ratio: 117/88;
 }
 
-.imageContainer img{
-    width: 100%;
-    height: 100%;
+.imageContainer img {
+  width: 100%;
+  height: 100%;
 }
 
 .navLinks {
-    display: flex;
-align-items: center;
-gap: 2rem;
-color: var(--white-color);
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  color: var(--white-color);
 }
