--- a/src/ux/layout/Layout.module.css
+++ b/src/ux/layout/Layout.module.css
@@ -1,11 +1,18 @@
 .layout {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .navigation {
-    position: fixed;
-    width: 100%;
-    z-index: 10;
+  position: fixed;
+  width: 100%;
+  z-index: 10;
+  backdrop-filter: blur(0px);
+  transition: 0.3s ease all;
+}
+
+.navigation.active {
+  backdrop-filter: blur(10px);
+  transition: 0.3s ease all;
 }
