--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -2,9 +2,6 @@
   height: 100vh;
   width: 100vw;
   overflow: hidden;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,14 +10,15 @@
 
 .gradient {
   position: absolute;
+  opacity: .70;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: linear-gradient(
     180deg,
-    rgba(47, 79, 79, 0.42) 66%,
-    rgba(0, 0, 0, 0) 77%
+    var(--primary-color) 66%,
+    rgba(0, 0, 0, 0) 100%
   );
 }
 
@@ -43,6 +41,11 @@ color: var(--white-color);
 
 .content span {
     font-size: 5.625rem;
+}
+
+.buttons{
+  display: flex;
+  gap: 1.5rem;
 }
 
 
