--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -9,9 +9,9 @@
 }
 
 .navigation.active {
-  opacity: 0.8;
+  opacity: 0.9;
   backdrop-filter: blur(10px);
-  background-color: var(--primary-color);
+  background-color: var(--background-color);
   transition: 0.3s ease all;
 }
 
@@ -40,4 +40,10 @@
   align-items: center;
   gap: 2rem;
   color: var(--white-color);
+  transition: all 0.3s ease;
+}
+
+.navLinks.active{
+  transition: all 0.3s ease;
+  color: var(--text-color);
 }
