--- a/src/index.css
+++ b/src/index.css
@@ -16,14 +16,21 @@
   --white-color: #ffffff;
 
   /* Font */
-  --primary-header: "Manrope", sans-serif;
-  --secondary-header: "Playfair Display", sans-serif;
+  --primary-header: Manrope, sans-serif;
+  --secondary-header: "Playfair Display", serif;
   --body-font: "DM Sans", sans-serif;
+  --button-text: Poppins, sans-serif;
+
 }
 
 body {
   min-width: 375px;
+  overflow-x: hidden
+}
 
+button {
+  border: none;
+  cursor: pointer;
 }
 
 ul {
@@ -40,7 +47,7 @@ h1 {
   font-family: var(--primary-header);
   font-size: 4.5rem;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 5rem;
 }
 
@@ -64,7 +71,7 @@ h4 {
   font-family: var(--secondary-header);
   font-size: 1.5rem;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 2rem;
 }
 
@@ -72,7 +79,7 @@ h5 {
   font-family: var(--secondary-header);
   font-size: 1.125rem;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 1.5rem;
 }
 
@@ -101,7 +108,7 @@ h5 {
 }
 
 .button-header {
-  font-family: var(--primary-header);
+  font-family: var(--button-text);
   font-size: 1.75rem;
   font-style: normal;
   font-weight: 500;
@@ -109,15 +116,15 @@ h5 {
 }
 
 .button-link {
-  font-family: var(--primary-header);
+  font-family: var(--button-text);
   font-size: 1.0625rem;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 1.5rem;
 }
 
 .button-regular {
-  font-family: var(--primary-header);
+  font-family: var(--button-text);
   font-size: 0.9375rem;
   font-style: normal;
   font-weight: 500;
@@ -144,4 +151,10 @@ h5 {
   border-radius: 0.5rem;
   color: var(--white-color);
   background: var(--secondary-color);
+}
+
+.parallax{
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
 }
