--- a/src/ux/section/Section.module.css
+++ b/src/ux/section/Section.module.css
@@ -6,16 +6,16 @@
   align-items: center;
   position: relative;
   overflow: hidden;
-  /* border: 2px solid green; */
+  border: 2px solid green;
 
 }
 
 .wrapper {
-  /* border: 2px solid green; */
+  border: 2px solid green;
   display: flex;
   max-width: 70rem;
   width: 100%;
-  min-height: 37.5rem;
+  min-height: 20rem;
   padding: 4rem 0rem;
   justify-content: center;
   align-items: center;
@@ -31,9 +31,13 @@
   z-index: -1;
 }
 
-.amenitiesBackground{
-  background-color: var(--primary-color);
+.contactBackgroundOne {
+  background-color: var(--background-color);
+  width: 100%;
+  height: 100%;
+  opacity: 0.93;
 }
+
 
 
 
