--- a/src/ux/section/Section.module.css
+++ b/src/ux/section/Section.module.css
@@ -1,17 +1,17 @@
 .section {
   display: flex;
-  padding: 0rem 2rem;
+  padding: 0rem 10rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
   overflow: hidden;
-  border: 2px solid green;
+  /* border: 2px solid green; */
 
 }
 
 .wrapper {
-  border: 2px solid green;
+  /* border: 2px solid green; */
   display: flex;
   max-width: 70rem;
   width: 100%;
