--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -24,13 +24,13 @@
   align-self: stretch;
 }
 
-.imageContainer {
+.logoContainer {
   width: 7.3125rem;
   height: 5.5rem;
   aspect-ratio: 117/88;
 }
 
-.imageContainer img {
+.logoContainer img {
   width: 100%;
   height: 100%;
 }
