--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
 
 body {
   min-width: 375px;
-  overflow-x: hidden
+  overflow-x: hidden;
 }
 
 button {
@@ -119,7 +119,7 @@ h5 {
   font-family: var(--button-text);
   font-size: 1.0625rem;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 1.5rem;
 }
 
