--- a/src/ux/section/Section.module.css
+++ b/src/ux/section/Section.module.css
@@ -1,17 +1,17 @@
 .section {
   display: flex;
-  padding: 0rem 10rem;
+  padding: 0rem 2rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
   overflow: hidden;
-  /* border: 2px solid green; */
+  border: 2px solid green;
 
 }
 
 .wrapper {
-  /* border: 2px solid green; */
+  border: 2px solid green;
   display: flex;
   max-width: 70rem;
   width: 100%;
@@ -31,11 +31,24 @@
   z-index: -1;
 }
 
-.contactBackgroundOne {
+.contactOverlay {
   background-color: var(--background-color);
   width: 100%;
   height: 100%;
   opacity: 0.93;
+}
+
+.pageHeaderBackground{
+height: 100%;
+background-repeat: no-repeat;
+background-size: cover;
+}
+
+.aboutOverlay{
+  background-color: var(--primary-color);
+  width: 100%;
+  height: 100%;
+  opacity: 0.6666;
 }
 
 
