--- a/src/ux/section/Section.module.css
+++ b/src/ux/section/Section.module.css
@@ -51,6 +51,18 @@ background-size: cover;
   opacity: 0.6666;
 }
 
+.ctaBackground {
+  background-position: top;
+  background-repeat: no-repeat;
+background-size: cover;
+}
+
+.ctaOverlay{
+  background-color: var(--primary-color);
+  width: 100%;
+  height: 100%;
+  opacity: 0.6666;
+}
 
 
 
