--- a/src/components/moreOffer/MoreOffer.module.css
+++ b/src/components/moreOffer/MoreOffer.module.css
@@ -14,7 +14,37 @@ gap: 2.25rem;
 font-size: 2.1875rem;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); /* Creates 2 equal columns */
+gap: 2rem;
+}
+
+.card{
+  padding: 2rem;
+  background-color: var(--background-color);
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  border: 1px solid var(--Border-Primary, rgba(140, 140, 140, 0.25));
+  border-radius: 0.5rem;
+}
+
+.description {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.card h4 {
+  color: var(--primary-color);
+}
+
+
 .imageContainer {
   height: 17.5rem;
-  border: 4px solid green;
+  border: 1px solid var(--Border-Primary, rgba(140, 140, 140, 0.25));
+  border-radius: 0.25rem;
+
 }
+
