--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,7 @@ input, textarea {
 
 input {
   display: flex;
+  border-radius: 4px;
 padding: 1rem;
 gap: 2rem;
 border: 1px solid var(--Border-Primary, rgba(140, 140, 140, 0.25));
@@ -52,6 +53,8 @@ textarea{
   border: 1px solid var(--Border-Primary, rgba(140, 140, 140, 0.25));
   padding: 1rem;
   resize: none;
+  border-radius: 4px;
+
 }
 
 ul {
