--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
   --button-text: Poppins, sans-serif;
 
   /* Border */
-  --border-primary: var(--accent-color) 
+  --border-primary: var(--accent-color);
 }
 
 body {
@@ -35,36 +35,34 @@ button {
   cursor: pointer;
 }
 
-input, textarea {
+input,
+textarea {
   all: unset;
 }
-
-
 
 input {
   display: flex;
   border-radius: 4px;
-padding: 1rem;
-gap: 2rem;
-border: 1px solid var(--Border-Primary, rgba(140, 140, 140, 0.25));
+  padding: 1rem;
+  gap: 2rem;
+  border: 1px solid var(--Border-Primary, rgba(140, 140, 140, 0.25));
 }
 
-textarea{
+textarea {
   border: 1px solid var(--Border-Primary, rgba(140, 140, 140, 0.25));
   padding: 1rem;
   resize: none;
   border-radius: 4px;
-
 }
 
 ul {
-  list-style: none; 
+  list-style: none;
   padding: 0;
 }
 
 a {
   text-decoration: none;
-  color: inherit; 
+  color: inherit;
 }
 
 h1 {
@@ -177,7 +175,7 @@ h5 {
   background: var(--secondary-color);
 }
 
-.parallax{
+.parallax {
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
