--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -39,6 +39,7 @@ gap: 1.5rem;
 color: var(--white-color);
 }
 
+
 .content span {
     font-size: 5.625rem;
 }
@@ -46,6 +47,12 @@ color: var(--white-color);
 .buttons{
   display: flex;
   gap: 1.5rem;
+}
+
+@media screen and (max-width: 992px) {
+.content span {
+    font-size: 5.0625rem;
+}
 }
 
 
