--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -43,7 +43,24 @@
   transition: all 0.3s ease;
 }
 
-.navLinks.active{
+.navLinks.active {
   transition: all 0.3s ease;
   color: var(--text-color);
+}
+
+.menuIcon {
+  width: 1.5rem;
+  height: 1.5rem;
+  cursor: pointer;
+  display: none;
+}
+
+@media screen and (max-width: 992px) {
+  .navLinks{
+    display: none;
+  }
+
+  .menuIcon{
+    display: block;
+  }
 }
